--- a/practice-html/elements.html
+++ b/practice-html/elements.html
@@ -5,16 +5,16 @@
     <title>演習1-4: HTMLのさまざまな要素</title>
   </head>
   <body>
-	見出し: 演習1-4: HTMLのさまざまな要素
-		小見出し: 拓殖大学の5学部
-			商学部
-			政経学部
-			外国語学部
-			国際学部
-			工学部
-		小見出し: カレーの作り方
-			肉，じゃがいも，にんじん，玉ねぎを一口大に切る
-			切った食材を鍋に入れて炒める
+	<h1> 演習1-4: HTMLのさまざまな要素</h1>
+		<h2>拓殖大学の5学部</h2> 
+			<h5>・商学部</h5>
+			<h5>・政経学部</h5>
+			<h5>・外国語学部</h5>
+			<h5>・国際学部</h5>
+			<h5>・工学部</h5>
+		<h2>カレーの作り方</h2> 
+			<h5>１肉，じゃがいも，にんじん，玉ねぎを一口大に切る</h5>
+			2 切った食材を鍋に入れて炒める
 			水を加えて沸騰させる
 			アクをとって15〜20分煮込む
 			火を止めてルーを溶かし入れる
