--- a/practice-dom/dom-intro.html
+++ b/practice-dom/dom-intro.html
@@ -13,14 +13,14 @@
 	  <p class="cands">サンダル</p>
 
 	  <h2>テキストの変更</h2>
-	  <p id="yacht">ヨット</p>
+	  <p id="yacht">夜ふかししないでね</p>
 	  <p>ごま<span id="solt">しお</span></p>
 
 	  <h2>CSS プロパティの変更</h2>
 	  <p id="rocket">ロケット</p>
 	  
 	  <h2 id="addition">新しい要素の追加（その1）</h2>
-
+<p>七面鳥</p>
 	  <h2>新しい要素の追加（その2）</h2>
 	  <div id="sarukani">
 		  <p>栗</p>
@@ -31,6 +31,7 @@
 	  <ul>
 		  <li id="whale">クジラ</li>
 		  <li>ジュース</li>
+		 
 	  </ul>
   </body>
 </html>
