--- a/practice-html/elements.html
+++ b/practice-html/elements.html
@@ -13,16 +13,16 @@
 			<h5>・国際学部</h5>
 			<h5>・工学部</h5>
 		<h2>カレーの作り方</h2> 
-			<h5>１肉，じゃがいも，にんじん，玉ねぎを一口大に切る</h5>
-			2 切った食材を鍋に入れて炒める
-			水を加えて沸騰させる
-			アクをとって15〜20分煮込む
-			火を止めてルーを溶かし入れる
-			再び火をつけて弱火でとろみがつくまで煮込む
-		小見出し: ハイパーリンク
-			演習1-3のHTMLファイル
-			index.html
-		小見出し: 宇宙望遠鏡(Wikipedia 「宇宙望遠鏡」より）
+			<p>１肉，じゃがいも，にんじん，玉ねぎを一口大に切る</p>
+			<p>2 切った食材を鍋に入れて炒める</p>
+			<p>3 水を加えて沸騰させる</p>
+			<p>4 アクをとって15〜20分煮込む</p>
+			<p>5 火を止めてルーを溶かし入れる</p> 
+			<p>6 再び火をつけて弱火でとろみがつくまで煮込む</p>
+		<h2>ハイパーリンク</h2> 
+			<p>演習1-3のHTMLファイル</p>
+			<a href="../index.html">index.html</a>
+		 <p>宇宙望遠鏡(Wikipedia 「宇宙望遠鏡」より）</p>
 			ハッブル宇宙望遠鏡
 				様々なトラブルに見舞われたが、宇宙飛行士の船外活動などによって修理が行われ、宇宙における多くの知見をもたらした。
 			チャンドラX線観測衛星
