--- a/kazuate.html
+++ b/kazuate.html
@@ -2,15 +2,14 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <script src="tv-program.js" defer></script>
-    <title>Projects</title>
+    <title>数当てゲーム</title>
+    <script src="kazuate.js" defer></script>
   </head>
 
   <body>
-    <!-- put navigation menu just below here -->
-
-    <h1>My projects</h1>
-
-    <p>Welcome to my project page, showing what exciting things I am currently doing.</p>
+    <h1>数当てゲーム</h1>
+    <p>将来ここにはテキストボックスとボタンを設置します</p>
+    <p><span id="kaisu">1</span>回目の予想: <span id="answer">4</span></p>
+    <p id="result">将来ここに判定結果を表示します</p>
   </body>
 </html>
