--- a/index.html
+++ b/index.html
@@ -18,12 +18,13 @@
       <p>
       </p>
       
-      <p>プロジェクト課題では...を実施する。ここで表示するデータは...</p>
+      <p>プロジェクト課題ではを実施する。ここで表示するデータは...</p>
       <p>プロジェクト課題で作成したページ：<a href="project.html"title="project.html"target="_blank">project.html</a></p>
       </section></p>
-      <2>数当てゲーム</2>
+      <h2>数当てゲーム</h2>
       <p>この課題では...を実施する...</p>
       <p>数当てゲームのページ</p>
+      <a href="kazuate.html"title="kazuate.html"target="_blank">project.html</a>
       <h2>毎回の実験で作成したページ</h2>
     
     <h3>第１回WWWとHTML</h3>
