--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       <h2>数当てゲーム</h2>
       <p>この課題では...を実施する...</p>
       <p>数当てゲームのページ</p>
-      <a href="kazuate.html"title="kazuate.html"target="_blank">project.html</a>
+      <a href="kazuate.html"title="kazuate.html"target="_blank">kazuate.html</a>
       <h2>毎回の実験で作成したページ</h2>
     
     <h3>第１回WWWとHTML</h3>
