--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
       <h2>毎回の実験で作成したページ</h2>
     
     <h3>第１回WWWとHTML</h3>
+    <a href="practice-html/structure.html"title="structure.html"target="_blank">演習1-3HTML文書の作成</a>
     今回は次の...について学びました。また次のように課題に取り組みました。
   
     
