--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     
     <h3>第１回WWWとHTML</h3>
     <a href="practice-html/structure.html"title="structure.html"target="_blank">演習1-3HTML文書の作成</a>
-    今回は次の...について学びました。また次のように課題に取り組みました。
+    <p>今回は次の...について学びました。また次のように課題に取り組みました。</p>
   
     
     <h3>第2回　CSSによるＷｅｂページの装飾</h3>
