--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
     
     <h3>第１回WWWとHTML</h3>
     <a href="practice-html/structure.html"title="structure.html"target="_blank">演習1-3HTML文書の作成</a>
+    <a href="practice-html/elements.html"title="elements.html"target="_blank">演習1-4さまざまな要素</a>
     <p>今回は次の...について学びました。また次のように課題に取り組みました。</p>
   
     
