--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
   
     
     <h3>第2回　CSSによるＷｅｂページの装飾</h3>
-    
+    <a href="practice-css/browser-intro.html"title="browser-intro.html"target="_blank">課題2</a>
     <h3>第3回　JavaScriptの基本</h3>
     <h3>第4回　DOMとJavaScript</h3>
     <h3>第5回　イベント処理</h3>
