--- a/index.html
+++ b/index.html
@@ -36,5 +36,7 @@
     <h3>第2回　CSSによるＷｅｂページの装飾</h3>
     <a href="practice-css/browser-intro.html"title="browser-intro.html"target="_blank">課題2</a>
     <h3>第3回　JavaScriptの基本</h3>
+    <a href="practice-js/obj-practice.html"title="obj-practice.html"target="_blank">演習1-3HTML文書の作成</a>
     <h3>第4回　DOMとJavaScript</h3>
+    <a href="practice-dom/dom-exercise.html"title="dom-exercise.html"target="_blank">演習1-3HTML文書の作成</a>
     <h3>第5回　イベント処理</h3>
