--- a/index.html
+++ b/index.html
@@ -6,18 +6,18 @@
     <title>My test page</title>
     <link rel="stylesheet" href="style.css">
   </head>
-  <body>
+  <>
  
       <header>
         <p><h1>「Webコンテンツ作成」の成果 </h1></p>
       </header>
-        <section><h2>本テーマの学習目標</h2>
-<P>HTML, CSS, JavaScriptを基礎から学びこれらを合わせてWebページを作成する方法を学ぶ。
-HTMLによってWebページの構成を記述する基本的理解する。
-CSS によって Web ページのデザインの設定を理解する。
-JavaScriptによってWebページのインタラクティブな処理を理解する。
-HTML,CSS,JavaScriptの構文リファレンスから，構文の書式や使用方法の情報を入手できる．
-HTML,CSS,JavaScript,画像・音声・動画ファイルを組み合わせて簡単な Web ページが作成できる</P>
+        <h2>本テーマの学習目標</h2>
+<P>HTML, CSS, JavaScriptを基礎から学びこれらを合わせてWebページを作成する方法を学ぶ。</P>
+<p>HTMLによってWebページの構成を記述する基本的理解する。</p>
+<p>CSSによってWeb ページのデザインの設定を理解する</p>
+<P>JavaScriptによってWebページのインタラクティブな処理を理解する</P>。
+<P>HTML,CSS,JavaScriptの構文リファレンスから，構文の書式や使用方法の情報を入手できる．</P>
+<p>HTML,CSS,JavaScript,画像・音声・動画ファイルを組み合わせて簡単な Web ページが作成できる</p>
         
           <h2>プロジェクト課題について</h2>
       <p>
@@ -35,7 +35,8 @@ HTML,CSS,JavaScript,画像・音声・動画ファイルを組み合わせて簡
     <h3>第１回WWWとHTML</h3>
     <a href="practice-html/structure.html"title="structure.html"target="_blank">演習1-3HTML文書の作成</a>
    <p><a href="practice-html/elements.html"title="elements.html"target="_blank">演習1-4さまざまな要素</a></p> 
-    <body>今回はHTMLの基本の作成の仕方について学びました。HTMLは要素と属性でなり立ってっている。</body>p>それらを組み合わせて、見やすいwebページを作りことにつながる。行の変更、文字の大きさ、また次のように課題に取り組みました。</p>
+    <p>今回はHTMLの基本の作成の仕方について学びました。HTMLは要素と属性でなり立ってっている。
+      それらを組み合わせて、見やすいwebページを作りことにつながる。行の変更、文字の大きさ、また次のように課題に取り組みました。</p>
   
     
     <h3>第2回　CSSによるＷｅｂページの装飾</h3>
