--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
         <h2>本テーマの学習目標</h2>
 <P>HTML, CSS, JavaScriptを基礎から学びこれらを合わせてWebページを作成する方法を学ぶ。</P>
 <p>HTMLによってWebページの構成を記述する基本的理解する。</p>
-<p>CSSによってWeb ページのデザインの設定を理解する</p>
-<P>JavaScriptによってWebページのインタラクティブな処理を理解する</P>
-<P>HTML,CSS,JavaScriptの構文リファレンスから，構文の書式や使用方法の情報を入手できる．</P>
-<p>HTML,CSS,JavaScript,画像・音声・動画ファイルを組み合わせて簡単な Web ページが作成できる</p>
+<p>CSSによってWeb ページのデザインの設定を理解する。</p>
+<P>JavaScriptによってWebページのインタラクティブな処理を理解する。</P>
+<P>HTML,CSS,JavaScriptの構文リファレンスから，構文の書式や使用方法の情報を入手できる。</P>
+<p>HTML,CSS,JavaScript,画像・音声・動画ファイルを組み合わせて簡単な Web ページが作成できる。</p>
         
           <h2>プロジェクト課題について</h2>
       <p>
@@ -43,7 +43,9 @@
   
     
     <h3>第2回　CSSによるＷｅｂページの装飾</h3>
-    今回はCSSを使って、Webページを装飾することを
+   <p>今回はCSSを使って、Webページを装飾することを学びました。</p> 
+   <p>要素を指定したところのみを装飾することもできれば、全体を装飾にることもできます。</p>
+   <p>また装飾した部分をグラデーション剃ることもできます。</p>
     <a href="practice-css/browser-intro.html"title="browser-intro.html"target="_blank">課題2</a>
     <h3>第3回　JavaScriptの基本</h3>
     <a href="practice-js/obj-practice.html"title="obj-practice.html"target="_blank">課題3</a>
