--- a/kazuate.html
+++ b/kazuate.html
@@ -3,14 +3,15 @@
   <head>
     <meta charset="utf-8">
     <title>数当てゲーム</title>
-    <script src="kazuate.js" defer></script>
+    <script src="kazuate.js" ></script>
   </head>
+ 
+
 
   <body>
     <h1>数当てゲーム</h1>
-    <label for="suuji">数字: </label>
-    <input type="number" name="number" size="10">
-    <p><span id="kaisu">1</span>回目の予想: <span id="answer">4</span></p>
+    <p>将来ここにはテキストボックスとボタンを設置します</p>
+    <p><span id="kaisu"></span>回目の予想: <span id="answer">4</span></p>
     <p id="result">将来ここに判定結果を表示します</p>
   </body>
 </html>
