--- a/kazuate.html
+++ b/kazuate.html
@@ -11,6 +11,8 @@
   <body>
     <h1>数当てゲーム</h1>
     <p>将来ここにはテキストボックスとボタンを設置します</p>
+    <input type="text" name="seisuu" size="10">
+    <button id="print">回答</button>
     <p><span id="kaisu"></span>回目の予想: <span id="answer">4</span></p>
     <p id="result">将来ここに判定結果を表示します</p>
   </body>
