--- a/kazuate.html
+++ b/kazuate.html
@@ -10,7 +10,7 @@
 
   <body>
     <h1>数当てゲーム</h1>
-    <p>将来ここにはテキストボックスとボタンを設置します</p>
+    <label for="seisuu">1から10の間の整数: </label>
     <input type="text" name="seisuu" size="10">
     <button id="print">回答</button>
     <p><span id="kaisu"></span>回目の予想: <span id="answer">4</span></p>
