--- a/practice-html/elements.html
+++ b/practice-html/elements.html
@@ -20,7 +20,7 @@
 			<p>5 火を止めてルーを溶かし入れる</p> 
 			<p>6 再び火をつけて弱火でとろみがつくまで煮込む</p>
 		<h2>ハイパーリンク</h2> 
-			<p>演習1-3のHTMLファイル</p>
+			<p><a href="structure.html">演習1-3</a></p>
 			<a href="../index.html">index.html</a>
 		 <p>宇宙望遠鏡(Wikipedia 「宇宙望遠鏡」より）</p>
 			ハッブル宇宙望遠鏡
