--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   
  
    <header>
-        <p><h1>「Webコンテンツ作成」の成果 </h1></p>
+        <p><h1>「Webコンテンツ作成」の </h1></p>
         
       </header>
         <h2>本テーマの学習目標</h2>
