--- a/practice-html/elements.html
+++ b/practice-html/elements.html
@@ -20,9 +20,9 @@
 			<p>5 火を止めてルーを溶かし入れる</p> 
 			<p>6 再び火をつけて弱火でとろみがつくまで煮込む</p>
 		<h2>ハイパーリンク</h2> 
-			<p><a href="structure.html">演習1-3</a></p>
+			<p><a href="structure.html">演習1-3のHTMLファイル</a></p>
 			<a href="../index.html">index.html</a>
-		 <p>宇宙望遠鏡(Wikipedia 「宇宙望遠鏡」より）</p>
+		 <h2>宇宙望遠鏡(Wikipedia 「宇宙望遠鏡」より)</h2>
 			<p>ハッブル宇宙望遠鏡</p>
 				<p>様々なトラブルに見舞われたが、宇宙飛行士の船外活動などによって修理が行われ、宇宙における多くの知見をもたらした。</p>
 			<p>チャンドラX線観測衛星</p>
