--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     <p>今回はHTMLの基本の作成の仕方について学びました。HTMLは要素と属性でなり立ってっています。</p>
       <p>それらを組み合わせて、見やすいwebページを作りことにつながります。</p>
       <p>行の変更、文字の大きさ、文字の書体などをHTMLから変更します。</p>
-      ハイパーリンクの設置、画像の埋め込みも学びました。ハイパーリンクでは設置する際にどこに飛ぶかを間違えないようにしなければいけません。
+      <p>ハイパーリンクの設置、画像の埋め込みも学びました。ハイパーリンクでは設置する際にどこに飛ぶかを間違えないようにしなければいけません。</p>
     <a href="practice-html/structure.html"title="practice-html/structure.html"target="_blank">演習1-3HTML文書の作成</a>
    <p><a href="practice-html/elements.html"title="practice-html/elements.html"target="_blank">演習1-4さまざまな要素</a></p> 
     
