--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <p><h1>「Webコンテンツ作成」の成果 </h1></p>
         
       </header>
-        <h2>本テーマの学習目標</h2>
+        <h2 class="exampleone">本テーマの学習目標</h2>
 <P>HTML, CSS, JavaScriptを基礎から学びこれらを合わせてWebページを作成する方法を学ぶ理解すること。</P>
 <p>HTMLによってWebページの構成を記述する基本的理解し作成できるようにする。</p>
 <p>CSSによってWeb ページのデザインの設定を理解する見やすく考え装飾できるようにする。</p>
@@ -26,13 +26,13 @@
       <p>プロジェクト課題ではを実施する。ここで表示するデータはそれぞれの各地の天気を表示する。</p>
       <p>プロジェクト課題で作成したページ：<a href="project.html"title="project.html"target="_blank">project.html</a></p>
       </section></p>
-      <h2>数当てゲーム</h2>
+      <h2 class="exampletwo">数当てゲーム</h2>
       <p>この課題ではランダムな数を入力し、その数が想定されている数と合致するか判定するプログラムを実施する</p>
       <p>数当てゲームのページ</p>
       <a href="kazuate.html"title="kazuate.html"target="_blank">kazuate.html</a>
       <h2>毎回の実験で作成したページ</h2>
     
-    <h3>第１回WWWとHTML</h3>
+    <h3 class="examplethree">第１回WWWとHTML</h3>
     <p>今回はHTMLの基本の作成の仕方について学びました。HTMLは要素と属性でなり立ってっています。</p>
       <p>それらを組み合わせて、見やすいwebページを作りことにつながります。</p>
       <p>行の変更、文字の大きさ、文字の書体などをHTMLから変更します。</p>
