--- a/project.html
+++ b/project.html
@@ -2,14 +2,23 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>数当てゲーム</title>
+    <title>世界の天気予報</title>
     <script src="kazuate.js" defer></script>
+    <link rel="stylesheet" href="project.css">
+  </head>
   </head>
 
   <body>
-    <h1>数当てゲーム</h1>
-    <p>将来ここにはテキストボックスとボタンを設置します</p>
-    <p><span id="kaisu">1</span>回目の予想: <span id="answer">4</span></p>
-    <p id="result">将来ここに判定結果を表示します</p>
+    
+    <p>緯度: 116.3972</p>
+    <p>経度: 39.9075</p>
+    <p>天気: 曇りがち</p> 
+    <p>最低気温: 9.94</p>
+    <p>最高気温: 9.94</p>
+    <p>湿度: 14</p> 
+    <p>風速: 2.65</p>
+    <p>風向: 197</p>
+    <p>都市名: 北京市</p>
+
   </body>
 </html>
