--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
    <p>今回はCSSを使って、Webページを装飾することを学びました。</p> 
    <p>要素を指定したところのみを装飾することもできれば、全体を装飾にることもできます。</p>
    <p>また装飾した部分をグラデーションにすることもできます。</p>
+   <p>また文字の大きさを変えたり、書体を変えたりしてより見やすく作れるようになりました。</p>
     <a href="practice-css/browser-intro.html"title="practice-css/browser-intro.html"target="_blank">課題2</a>
     <h3>第3回　JavaScriptの基本</h3>
     <a href="practice-js/obj-practice.html"title="pratice-js/obj-practice.html"target="_blank">課題3</a>
