--- a/project.html
+++ b/project.html
@@ -3,13 +3,13 @@
   <head>
     <meta charset="utf-8">
     <title>世界の天気予報</title>
-    <script src="kazuate.js" defer></script>
+    <script src="weather.js" defer></script>
     <link rel="stylesheet" href="project.css">
   </head>
   </head>
 
   <body>
-    
+    <h1>世界の天気予報</h1>
     <p>緯度: 116.3972</p>
     <p>経度: 39.9075</p>
     <p>天気: 曇りがち</p> 
