--- a/index.html
+++ b/index.html
@@ -53,3 +53,4 @@
     <h3>第4回　DOMとJavaScript</h3>
     <a href="practice-dom/dom-exercise.html"title="practice-dom/dom-exercise.html"target="_blank">課題4</a>
     <h3>第5回　イベント処理</h3>
+    <a href="practice-event/event-list.html"title="practice-event/event-list.html"target="_blank">課題5</a>
