--- a/kazuate.html
+++ b/kazuate.html
@@ -15,7 +15,7 @@
     <button id="print">回答</button>
     <span><p id="result"></p>
       <p id="result2"></p></span>
-    <p><span id="kaisu"></span>回目の予想: <span id="answer">4</span></p>
+    <p><span id="kaisuu"></span>回目の予想: <span id="answer">4</span></p>
     <p id="result">将来ここに判定結果を表示します</p>
   </body>
 </html>
