--- a/kazuate.html
+++ b/kazuate.html
@@ -16,6 +16,6 @@
     <span><p id="result"></p>
       <p id="result2"></p></span>
     <p><span id="kaisuu"></span>回目の予想: <span id="answer">4</span></p>
-    <p id="result">将来ここに判定結果を表示します</p>
+    <p id="result3">将来ここに判定結果を表示します</p>
   </body>
 </html>
