--- a/kazuate.html
+++ b/kazuate.html
@@ -12,10 +12,8 @@
     <h1>数当てゲーム</h1>
     <label for="seisuu">1から10の間の整数: </label>
     <input type="text" name="seisuu" size="10">
-    <button id="print">回答</button>
-    <span><p id="result"></p>
-      <p id="result2"></p></span>
-    <p><span id="kaisuu"></span>回目の予想: <span id="answer">4</span></p>
+    <button id="kaito">回答</button>
+    <p><span id="kaisuu">1</span>回目の予想: <span id="answer"></span></p>
     <p id="result">将来ここに判定結果を表示します</p>
   </body>
 </html>
