--- a/kazuate.html
+++ b/kazuate.html
@@ -10,10 +10,10 @@
 
   <body>
     <h1>数当てゲーム</h1>
-    <label for="seisuu">1から10の間の整数: </label>
-    <input type="text" name="seisuu" size="10">
+    <label for="seisu">1から10の間の整数: </label>
+    <input type="number" name="seisu" size="10">
     <button id="kaito">回答</button>
-    <p><span id="kaisuu">1</span>回目の予想: <span id="answer"></span></p>
+    <p><span id="kaisu">1</span>回目の予想: <span id="answer"></span></p>
     <p id="result">将来ここに判定結果を表示します</p>
   </body>
 </html>
