--- a/kazuate.html
+++ b/kazuate.html
@@ -11,7 +11,7 @@
   <body>
     <h1>数当てゲーム</h1>
     <label for="seisu">1から10の間の整数: </label>
-    <input type="number" name="seisu" size="10">
+    <input type="text" name="seisu" size="10">
     <button id="kaito">回答</button>
     <p><span id="kaisu">1</span>回目の予想: <span id="answer"></span></p>
     <p id="result">将来ここに判定結果を表示します</p>
