--- a/project.html
+++ b/project.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>世界の天気予報</title>
+    <script src="https://cbnjs.coludflare.com/ajax/libs/axios/0.27.2/axios.min.js"></script>
     <script src="weather.js" defer></script>
     <link rel="stylesheet" href="project.css">
   </head>
@@ -10,15 +11,31 @@
 
   <body>
     <h1>世界の天気予報</h1>
-    <p>緯度: 116.3972</p>
-    <p>経度: 39.9075</p>
-    <p>天気: 曇りがち</p> 
-    <p>最低気温: 9.94</p>
-    <p>最高気温: 9.94</p>
-    <p>湿度: 14</p> 
-    <p>風速: 2.65</p>
-    <p>風向: 197</p>
-    <p>都市名: 北京市</p>
+    <label for="santaro">都市の選択:</label>
+    <select name="country" id="country">
+    <option value="360630">カイロ</option>
+    <option value="524901">モスクワ</option>
+    <option value="993800">ヨハネブルク</option>
+    <option value="1816670">北京</option>
+    <option value="1850147">東京</option>
+    <option value="1880252">シンガポール</option>
+    <option value="2147714">シドニー</option>
+    <option value="2643743">ロンドン</option>
+    <option value="2968815">パリ</option>
+    <option value="3451189">リオデジャネイロ</option>
+    <option value="5128581">ニューヨーク</option>
+    <option value="5368361">ロサンゼルス</option>
+    </select>
+    <button id="btn">検索</button>
+<p id="coord.lon"></p>
+<p id="coord.lat"></p>
+<p id="weathre.descriptiton"></p>
+<p id="main.temp_min"></p>
+<p id="main.temp_max"></p>
+<p id="main.humidity"></p>
+<p id="wind.speed"></p>
+<p id="wind.deg"></p>
+<p id="name"></p>
 
   </body>
 </html>
