--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
       <p>この課題ではランダムな数を入力し、その数が想定されている数と合致するか判定するプログラムを実施する</p>
       <p>数当てゲームのページ</p>
       <a href="kazuate.html"title="kazuate.html"target="_blank">kazuate.html</a>
+      <p>数当てではボタンを設置してそこで1~10</p>
       <h2>毎回の実験で作成したページ</h2>
     
     <h3 class="examplethree">第１回WWWとHTML</h3>
