--- a/project.html
+++ b/project.html
@@ -27,14 +27,14 @@
     <option value="5368361">ロサンゼルス</option>
     </select>
     <button id="btn">検索</button>
-<p id="coord.lon"></p>
-<p id="coord.lat"></p>
-<p id="weathre.descriptiton"></p>
-<p id="main.temp_min"></p>
-<p id="main.temp_max"></p>
-<p id="main.humidity"></p>
-<p id="wind.speed"></p>
-<p id="wind.deg"></p>
+<p id="lon"></p>
+<p id="lat"></p>
+<p id="description"></p>
+<p id="temp_min"></p>
+<p id="temp_max"></p>
+<p id="humidity"></p>
+<p id="speed"></p>
+<p id="deg"></p>
 <p id="name"></p>
 
   </body>
