--- a/project.html
+++ b/project.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>世界の天気予報</title>
-    <script src="https://cbnjs.coludflare.com/ajax/libs/axios/0.27.2/axios.min.js"></script>
+    <script src="https://cdnjs.coludflare.com/ajax/libs/axios/0.27.2/axios.min.js"></script>
     <script src="weather.js" defer></script>
     <link rel="stylesheet" href="project.css">
   </head>
