--- a/project.html
+++ b/project.html
@@ -24,7 +24,7 @@
         <option value="5128581">ニューヨーク</option>
         <option value="5368361">ロサンゼルス</option>
     </select>
-    <button id="btn">検索</button>
+    <button id="target">検索</button>
     <p id="lon"></p>
     <p id="lat"></p>
     <p id="description"></p>
