--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       <p>この課題ではランダムな数を入力し、その数が想定されている数と合致するか判定するプログラムを実施する</p>
       <p>数当てゲームのページ</p>
       <a href="kazuate.html"title="kazuate.html"target="_blank">kazuate.html</a>
-      <p>数当てではボタンを設置してそこで1~10</p>
+      <p>数当てゲームでは1~10の数字を入力します。そして予想した数字を入れます。３回まで予想をできるようにプログラムを書きます。まずランダムな整数を用意するためのプログラムを作り、console.logにより表示させました。ボタンを配置したのちにイベントハンドラの定義をしました。予想が当たった場合は『正解です、おめでとう！』と表示させます。回答が答えより小さかった場合『間違い。答えはもっと大きいです。』と表示させます。回答が答えよりも大きかった場合『間違い。答えはもっと小さいです。』と表示させます。また、３回で当てることができなかった場合３回目の回答で『間違い。残念でした答えは○○でした。』と表示させます。４回目以降の回答は『答えは○○でした。すでにゲームは終わっています。』と表示させます。</p>
       <h2>毎回の実験で作成したページ</h2>
     
     <h3 class="examplethree">第１回WWWとHTML</h3>
