--- a/index.html
+++ b/index.html
@@ -25,12 +25,23 @@
       
       <p>プロジェクト課題ではを実施する。ここで表示するデータはそれぞれの各地の天気を表示する。</p>
       <p>プロジェクト課題で作成したページ：<a href="project.html"title="project.html"target="_blank">project.html</a></p>
+
+      <p>プロジェクト課題ではwwwのサーバーへ検索をかけて、その検索結果を表示するという事をしました。
+        このページでは世界12都市の天気を調べることが可能です。天気、経緯、経度、最高気温、最低気温、湿度、風向き、風速、都市名が検索結果として表示されます。
+        工夫した点としては、背景色のカラーを見やすくしたのと写真をつけてより天気だと言うのが分かるようにしました。
+        それと表示された結果が何度の繰り返し連なり表示されないようにしました。
+        </p>
       </section></p>
       <h2 class="exampletwo">数当てゲーム</h2>
       <p>この課題ではランダムな数を入力し、その数が想定されている数と合致するか判定するプログラムを実施する</p>
       <p>数当てゲームのページ</p>
       <a href="kazuate.html"title="kazuate.html"target="_blank">kazuate.html</a>
-      <p>数当てゲームでは1~10の数字を入力します。そして予想した数字を入れます。３回まで予想をできるようにプログラムを書きます。まずランダムな整数を用意するためのプログラムを作り、console.logにより表示させました。ボタンを配置したのちにイベントハンドラの定義をしました。予想が当たった場合は『正解です、おめでとう！』と表示させます。回答が答えより小さかった場合『間違い。答えはもっと大きいです。』と表示させます。回答が答えよりも大きかった場合『間違い。答えはもっと小さいです。』と表示させます。また、３回で当てることができなかった場合３回目の回答で『間違い。残念でした答えは○○でした。』と表示させます。４回目以降の回答は『答えは○○でした。すでにゲームは終わっています。』と表示させます。</p>
+      <p>数当てゲームでは1~10の数字を入力します。そして予想した数字を入れます。３回まで予想をできるようにプログラムを書きます。
+        まずランダムな整数を用意するためのプログラムを作り、console.logにより表示させました。ボタンを配置したのちにイベントハンドラの定義をしました。
+        予想が当たった場合は『正解です、おめでとう！』と表示させます。回答が答えより小さかった場合『間違い。答えはもっと大きいです。』と表示させます。
+        回答が答えよりも大きかった場合『間違い。答えはもっと小さいです。』と表示させます。
+        また、３回で当てることができなかった場合３回目の回答で『間違い。残念でした答えは○○でした。』と表示させます。
+        ４回目以降の回答は『答えは○○でした。すでにゲームは終わっています。』と表示させます。</p>
       <h2>毎回の実験で作成したページ</h2>
     
     <h3 class="examplethree">第１回WWWとHTML</h3>
