--- a/index.html
+++ b/index.html
@@ -60,9 +60,17 @@
    また装飾した部分をグラデーションにすることもできます。
    また文字の大きさを変えたり、書体を変えたりしてより見やすく作れるようになりました。</p>
     <a href="practice-css/browser-intro.html"title="practice-css/browser-intro.html"target="_blank">課題2</a>
+
     <h3>第3回　JavaScriptの基本</h3>
+    <p>今回はJavaScriptには何が出来るのかについて学びました。JavaScriptではプログラムをコンソールに表示させることができ、
+      プログラムを書いている際に間違えた部分などを素早く確認して修正することができます。
+      JavaScriptでは今後難しいプログラムを書く時にとても大事になってくるものです。</p>
     <a href="practice-js/obj-practice.html"title="pratice-js/obj-practice.html"target="_blank">課題3</a>
+
     <h3>第4回　DOMとJavaScript</h3>
+
     <a href="practice-dom/dom-exercise.html"title="practice-dom/dom-exercise.html"target="_blank">課題4</a>
+
     <h3>第5回　イベント処理</h3>
+    
     <a href="practice-event/event-list.html"title="practice-event/event-list.html"target="_blank">課題5</a>
