--- a/index.html
+++ b/index.html
@@ -68,9 +68,13 @@
     <a href="practice-js/obj-practice.html"title="pratice-js/obj-practice.html"target="_blank">課題3</a>
 
     <h3>第4回　DOMとJavaScript</h3>
-
+<p>今回はDOMについて学びました。DOMはWebコンテンツを作成する上でとても重要で、DOMはhtmlのデータ構造のことです。
+  またJavaScript などのプログラムによって，Web コンテンツの内容を読み取ったり，コンテンツに変更を加えたりする処理が書けるようになります。
+  DOM と JavaScript を組み合わせることによって，動きのある Web ページを実現できるようになります。</p>
     <a href="practice-dom/dom-exercise.html"title="practice-dom/dom-exercise.html"target="_blank">課題4</a>
 
     <h3>第5回　イベント処理</h3>
-    
+<p>今回はイベント処理について学びました。
+  イベント処理ではボタンを押したらイベントが起こるようなプログラムを作成しました。
+  方法としてはイベントハンドラを設置して、その後にどのように変化させたいかを設定しました。</p>
     <a href="practice-event/event-list.html"title="practice-event/event-list.html"target="_blank">課題5</a>
