--- a/index.html
+++ b/index.html
@@ -78,3 +78,19 @@
   イベント処理ではボタンを押したらイベントが起こるようなプログラムを作成しました。
   方法としてはイベントハンドラを設置して、その後にどのように変化させたいかを設定しました。</p>
     <a href="practice-event/event-list.html"title="practice-event/event-list.html"target="_blank">課題5</a>
+
+    <h3>苦心点、工夫点、強調点、感想</h3>
+    <p>今回のwebアプリケーションの授業ではゼロの時点からwebを作るということでとても苦戦しました。全てが新しい学びでした。
+      最初はhtmlで文章を書くだけだったのであまり苦戦しませんでした。２回になると文章のwebページを見やすくするためにC S Sでの装飾を覚えました
+      。文字を大きくしたり、色などを入れて見やすいwebページを作るようにしました。具体的には強調したい文字を大きくして、色は統一感のある色使いを心がけました。
+      レイアウトでは文字と文字の間隔や行替えのタイミングをどこにするか考えながら作りました。その後ハイパーリンクを設置してリンクに飛べるようにしました。
+      ３回目のJavaScriptを学んだときは新しいことだったのですこし苦戦しました。キャンパスの住所、D館の教室名、日本語の学科名をコンソールにて表示させました。
+      特にオブジェクトの参照の時はどのようにプログラムを書くか考えながら色々試しながら作りました。またfor-of分を使うときは初めてだったので今まで習ったJavaとど違うかを考えながら理解するようにしました。
+      ４回目のDOMとJavaScriptでは今まで習ったことを応用として複合しなければならなかったので、とても苦戦しました
+      。なので、工夫としてJSファイルがどのように動いて反映されるかをコンソールで一つずつ確認しながら動かし思い通りに動いたらJSファイルに書き込むようにしていました。
+      ５回目のイベント処理はとても楽しかったです。イベント処理には様々なものがありました。ボタンを設置し押したら色が変わるようにするだけでも多くの種類がありました。
+      プロジェクト課題では、天気予報を表示させました。１から作ったので今まで学んだことを一つずつ確認しながらじっくり作りました。
+      元々ある天気の情報を選んでその都市の情報を表示させるというのが一番苦戦しました。なので、その時もコンソールで少しずつ実行しながらエラーが出たらその場で修正して、
+      また実行してというのを繰り返しながら完成させました。自分はあまり得意な方ではなかったので基礎をしっかりと使って完成させました。
+      また、シンプルかつ誰がみても見やすいと思えるようなレイアウトにできるように心がけました。一見難しそうでしたが、プログラムを書いてみると今まで学んだことできれいに作ることができました。
+      今回授業を通して、webアプリケーションは面白く、しっかり学べば将来、手に仕事をつけることができるものだと知れました。今後さらに学んで自分の仕事に役立てることができればいいと思いました。</p>
