--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
       </section></p>
       <h2 class="exampletwo">数当てゲーム</h2>
       <p>この課題ではランダムな数を入力し、その数が想定されている数と合致するか判定するプログラムを実施する</p>
-      <p>数当てゲームのページ</p>
-      <a href="kazuate.html"title="kazuate.html"target="_blank">kazuate.html</a>
+      <p>数当てゲームのページ:<a href="kazuate.html"title="kazuate.html"target="_blank">kazuate.html</a></p>
+      
       <p>数当てゲームでは1~10の数字を入力します。そして予想した数字を入れます。３回まで予想をできるようにプログラムを書きます。
         まずランダムな整数を用意するためのプログラムを作り、console.logにより表示させました。ボタンを配置したのちにイベントハンドラの定義をしました。
         予想が当たった場合は『正解です、おめでとう！』と表示させます。回答が答えより小さかった場合『間違い。答えはもっと大きいです。』と表示させます。
