--- a/project.html
+++ b/project.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <h1>世界の天気</h1>
-    <label for="santaro">都市の選択：</label><img src="https://png.pngtree.com/png-clipart/20230426/original/pngtree-sun-sunflower-style-pattern-png-image_9102932.png">
+    <label for="santaro">都市の選択：</label><img src="https://png.pngtree.com/png-clipart/20230426/original/pngtree-sun-sunflower-style-pattern-png-image_9102932.png" width="300">
     <select name="country" id="country">
         <option value="360630">カイロ</option>
         <option value="524901">モスクワ</option>
