--- a/project.html
+++ b/project.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>世界の天気</title>
+    <title><li>would whether</li></title>
     <link rel="stylesheet" href="project.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.27.2/axios.min.js"></script>
     <script src="weather.js"defer></script>
