--- a/project.html
+++ b/project.html
@@ -2,13 +2,13 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title><li>would whether</li></title>
+    <title>世界の天気</title>
     <link rel="stylesheet" href="project.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.27.2/axios.min.js"></script>
     <script src="weather.js"defer></script>
   </head>
   <body>
-    <h1>世界の天気</h1>
+    <h1>would whether </h1>
     <label for="santaro">都市の選択：</label><img src="https://png.pngtree.com/png-clipart/20230426/original/pngtree-sun-sunflower-style-pattern-png-image_9102932.png" width="300">
     <select name="country" id="country">
         <option value="360630">カイロ</option>
