--- a/index.html
+++ b/index.html
@@ -25,11 +25,11 @@
       <p>プロジェクト課題ではを実施する。ここで表示するデータはそれぞれの各地の天気を表示する。</p>
       <p>プロジェクト課題で作成したページ：<a href="project.html"title="project.html"target="_blank">project.html</a></p>
 
-      <p>プロジェクト課題ではwwwのサーバーへ検索をかけて、その検索結果を表示するという事をしました。
+      <ul><li>プロジェクト課題ではwwwのサーバーへ検索をかけて、その検索結果を表示するという事をしました。
         このページでは世界12都市の天気を調べることが可能です。天気、経緯、経度、最高気温、最低気温、湿度、風向き、風速、都市名が検索結果として表示されます。
         工夫した点としては、背景色のカラーを見やすくしたのと写真をつけてより天気だと言うのが分かるようにしました。
         それと表示された結果が何度の繰り返し連なり表示されないようにしました。
-        </p>
+        </li></ul>
       </section></p>
       <h2 class="exampletwo">数当てゲーム</h2>
       <p>この課題ではランダムな数を入力し、その数が想定されている数と合致するか判定するプログラムを実施する</p>
